Somewhat fix line wrapping in css

--- a/docs/website/static/css/site.css
+++ b/docs/website/static/css/site.css
@@ -39,7 +39,8 @@ q:before, q:after {
 }
 table {
 	border-collapse: collapse;
-	border-spacing: 0;
+    border-spacing: 0;
+
 }
 
 /* Layout and typography */
@@ -64,9 +65,7 @@ h2 a {
     text-decoration: none;
 }
 div.example {
-    width: 900px;
-    min-width: 900px;
-    max-width: 900px;
+    display: inline-block;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 120px;
@@ -74,6 +73,7 @@ div.example {
 div.example table {
     margin-top: 15px;
     margin-bottom: 20px;
+
 }
 p.next {
     margin-bottom: 20px;
@@ -99,6 +99,7 @@ div#intro ul {
     padding-top: 20px;
 }
 table td {
+    width: max-content;
     border: 0;
     outline: 0;
 }
@@ -128,8 +129,6 @@ td.docs p {
     padding-bottom: 15px;
 }
 td.code {
-    width: 400px;
-    max-width: 400px;
     min-width: 400px;
     padding-top: 5px;
     padding-right: 5px;
@@ -140,6 +139,7 @@ td.code {
 }
 td.code.leading {
     padding-bottom: 10px;
+    
 }
 td.code.empty {
     background: #ffffff;
